--- a/src/components/cards/styles.module.scss
+++ b/src/components/cards/styles.module.scss
@@ -15,3 +15,23 @@
     column-gap: 8px;
     row-gap: 12px;
 }
+
+.modal {
+    width: 90%;
+    max-width: 40rem;
+    background-color: #F6F8FC;
+    border-radius: 0.5rem;
+}
+
+.modalOverlay {
+    background: #00000067;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
