--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   position: relative;
+  overflow-x: hidden;
 
   > img:first-child {
     z-index: -1;
